Specify LOCATE_PROJECT for correct app engine URL

--- a/k8s/prometheus-federation/deployments/script-exporter.yml
+++ b/k8s/prometheus-federation/deployments/script-exporter.yml
@@ -37,7 +37,7 @@ spec:
         - name: MONITORING_SIGNER_KEY
           value: /keys/monitoring-signer-key.json
         - name: LOCATE_URL
-          value: https://locate-dot-{{GCLOUD_PROJECT}}.appspot.com/v2/monitoring/
+          value: https://locate-dot-{{LOCATE_PROJECT}}.appspot.com/v2/monitoring/
         ports:
         - containerPort: 9172
         volumeMounts:
