--- a/k8s/prometheus-federation/mlab-oti.yml
+++ b/k8s/prometheus-federation/mlab-oti.yml
@@ -1,6 +1,7 @@
 # Configuration values for mlab-oti
 
 GCLOUD_PROJECT: mlab-oti
+LOCATE_PROJECT: mlab-ns
 PROMETHEUS_RAM: 42Gi
 PROMETHEUS_CPU: 10000m
 PROMETHEUS_VOLUME_SIZE: 400Gi
