--- a/k8s/prometheus-federation/mlab-staging.yml
+++ b/k8s/prometheus-federation/mlab-staging.yml
@@ -1,6 +1,7 @@
 # Configuration values for mlab-staging
 
 GCLOUD_PROJECT: mlab-staging
+LOCATE_PROJECT: mlab-staging
 PROMETHEUS_RAM: 42Gi
 PROMETHEUS_CPU: 10000m
 PROMETHEUS_VOLUME_SIZE: 400Gi
