--- a/k8s/prometheus-federation/mlab-sandbox.yml
+++ b/k8s/prometheus-federation/mlab-sandbox.yml
@@ -1,6 +1,7 @@
 # Configuration values for mlab-sandbox.
 
 GCLOUD_PROJECT: mlab-sandbox
+LOCATE_PROJECT: mlab-sandbox
 PROMETHEUS_RAM: 42Gi
 PROMETHEUS_CPU: 10000m
 PROMETHEUS_VOLUME_SIZE: 200Gi
