--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -669,59 +669,9 @@ scrape_configs:
         replacement: ${1}
 
 
-  # Scrape config for the script_exporter. There is one script_exporter service
-  # running in a Docker container on a GCE VM in each GCP project.
-  #
-  # The script_exporter generates its own labels.
-  - job_name: 'script-exporter'
-    static_configs:
-      - targets:
-        - script-exporter.c.{{PROJECT}}.internal:9172
-        - script-exporter.c.{{PROJECT}}.internal:9100
-
-
-  # script_exporter configurations. The scrape_timeout is set very high because
-  # the NDT end-to-end test will take around 35 seconds.
-  - job_name: 'script-targets'
-    metrics_path: /probe
-    scrape_timeout: 45s
-
-    file_sd_configs:
-      - files:
-          - /script-targets/*.json
-        # Attempt to re-read files every five minutes.
-        refresh_interval: 5m
-
-    # This relabel config is necessary. The relabel config redefines the address
-    # to scrape and sets the correct parameters to pass to the scrape target.
-    relabel_configs:
-      # The value of the source label named "service" must match the name of a
-      # configured script in the script_exporter configuration. See this file:
-      # https://github.com/m-lab/script-exporter-support/blob/master/script_exporter.yml
-      - source_labels: [service]
-        regex: (.*)
-        target_label: __param_name
-        replacement: ${1}
-
-      # The default __address__ value is a target host from the config file.
-      # Here, we set (i.e. "replace") a request parameter "target" equal to the
-      # host value.
-      - source_labels: [__address__]
-        regex: (.*)
-        target_label: __param_target
-        replacement: ${1}
-
-      # Since __address__ is the target that prometheus will contact,
-      # unconditionally reset the __address__ label to the script_exporter
-      # address.
-      - source_labels: []
-        regex: .*
-        target_label: __address__
-        replacement: script-exporter.c.{{PROJECT}}.internal:9172
-
-
-  # script-exporter configuration for federation cluster. The scrape_timeout is
-  # set very high because the NDT end-to-end test takes around 30 seconds.
+  # Scrape config for the script_exporter for federation cluster. The
+  # scrape_timeout is set very high because the NDT end-to-end test takes
+  # around 30 seconds.
   - job_name: 'script-targets-federation'
     metrics_path: /probe
     scrape_timeout: 50s
