--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -334,6 +334,7 @@ scrape_configs:
         - 'kube_pod_status_ready'
         # For recording rules for NDT Early Warning dashboard and Global Test Rates.
         - 'ndt5_client_test_results_total'
+        - 'ndt7_client_test_results_total'
         - 'node_disk_io_time_seconds_total{deployment="node-exporter"}'
         # Aggregate the collectd health status from node-exporter.
         - 'collectd_mlab_success'
