--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -268,7 +268,7 @@ groups:
 
   # A TLS certificate in use by an ndt-server is about to expire.
   - alert: NdtTlsCertificateAboutToExpire
-    expr: min by (experiment, module) ((probe_ssl_earliest_cert_expiry{experiment!=""} - time()) / 86400) < 5
+    expr: min by (experiment) ((probe_ssl_earliest_cert_expiry{experiment!=""} - time()) / 86400) < 5
     for: 1h
     labels:
       repo: ops-tracker
