--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -507,7 +507,7 @@ scrape_configs:
     # TODO: retire this in favor of adding the label at target generation time.
     metric_relabel_configs:
       - source_labels: [machine]
-        regex: mlab[1-4]\.([a-z]{3}[0-9tc]{2}).+
+        regex: mlab[1-4]-([a-z]{3}[0-9tc]{2}).+
         target_label: site
         replacement: $1
 
@@ -801,7 +801,7 @@ scrape_configs:
     # TODO: retire this in favor of adding the label at target generation time.
     metric_relabel_configs:
       - source_labels: [machine]
-        regex: mlab[1-4]\.([a-z]{3}[0-9tc]{2}).+
+        regex: mlab[1-4]-([a-z]{3}[0-9tc]{2}).+
         target_label: site
         replacement: $1
 
@@ -835,4 +835,3 @@ scrape_configs:
         regex: .*
         target_label: __address__
         replacement: switch-monitoring-service.default.svc.cluster.local:8080
-
