--- a/.travis.yml
+++ b/.travis.yml
@@ -137,14 +137,13 @@ deploy:
     all_branches: true
     condition: $TRAVIS_TAG == production* || $TRAVIS_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+
 
-# DISABLE PROD data-processing support until cluster is created.
-#- provider: script
-#  script: $TRAVIS_BUILD_DIR/kubectl.sh mlab-oti data-processing ./apply-cluster.sh
-#  skip_cleanup: true
-#  on:
-#    repo: m-lab/prometheus-support
-#    all_branches: true
-#    condition: $TRAVIS_TAG == production* || $TRAVIS_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+
+- provider: script
+  script: $TRAVIS_BUILD_DIR/kubectl.sh mlab-oti data-processing ./apply-cluster.sh
+  skip_cleanup: true
+  on:
+    repo: m-lab/prometheus-support
+    all_branches: true
+    condition: $TRAVIS_TAG == production* || $TRAVIS_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+
 
 - provider: script
   script: "$TRAVIS_BUILD_DIR/deploy_bbe_config.sh mlab-oti LINODE_PRIVATE_KEY_ipv6_monitoring"
